<resources>
    <string name="app_name">Cine Box</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="app_description">Cine Box uses TMDB api but is not endorsed or certified by TMDB.</string>
    <string name="version">Version 1.0</string>

    <string name="released">Released</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="orit">Original Title</string>
    <string name="oril">Original Language</string>
    <string name="budget">Budget</string>
    <string name="popular">Popularity</string>

    <string name="name">Name</string>
    <string name="bio">Biography</string>
    <string name="about">About</string>
</resources>
